# eVtolSimulation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output.txt
aircrafts/: Aircraft.cpp  Aircraft.cxx  Aircraft.h  AircraftType.cpp  AircraftType.cxx  AircraftType.h  test_AircraftType.cpp
worlds/: Charger.cpp  Charger.h  SimpleWorld.cpp  SimpleWorld.h  SimulationWorld.cpp  SimulationWorld.h
worlds/SimpleWorld/: AircraftEvents.h  Event.cpp  Event.h  World.cpp  World.h
